--- a/src/style/global/main.scss
+++ b/src/style/global/main.scss
@@ -191,7 +191,27 @@ width: 100%;
   &__average--red {
     border: 1.5px solid red;
   }
+  &__svg {
+    position: absolute;
+    top: 13px;
+    right: 0px;
+    width: 36px;
+    height: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    cursor: pointer;
+    transition: width height 1s;
+    z-index:1 ;
+  }
+  &__svg:hover {
+    stroke: #EE204D;
+    fill:#EE204D ;
+    cursor: pointer;
+  }
 }
+
 #myImg {
   cursor: pointer;
   transition: 0.3s;
@@ -203,7 +223,7 @@ width: 100%;
 display: block;
   position: relative;
   /* margin-top: -800px; */
-  z-index: 1;
+  z-index: 3;
   padding: 50px 0;
   top: 0;
   left: 0;
@@ -301,7 +321,7 @@ h4 {
     margin-top: 370px;
   }
   .movie{
-    width: 340px;
+    width: 240px;
     margin: 0 auto;
     &__today {
     margin: 0 auto;
